# meshline

./: .gitignore  README.md  index.html  text-message-sentiment.ipynb
Firmware/: CMakeLists.txt  Makefile-user.mk  test.py
Firmware/app/: application.cpp  webserver.cpp
Firmware/files/: chat_ui.html  contacts.html  login.html
Firmware/include/: tytherm.h
Meshline Mobile Frontend/: chat_ui.html  contacts.html  login.html
Platform/: index.html
Platform/assets/: app.js  main.css
Platform/disaster-api/: api.py
data/: disaster_NBClassifier.pkl
disaster-api/: requirements.txt
disaster-api/templates/: index.html
docs/: CHANGELOG.md  TODO.md
